# reusing-vec

./: Cargo.toml  README.md
src/: lib.rs  queue.rs
